fix: Style scrollbar corner according to theme #1120

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -27,8 +27,12 @@
   &::-webkit-scrollbar {
     width: 12px;
   }
-  
+
   &::-webkit-scrollbar-track {
+    background: var(--text0);
+  }
+
+  &::-webkit-scrollbar-corner {
     background: var(--text0);
   }
 }
